--- a/mywebsite.html
+++ b/mywebsite.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="/styles/clicker-game.css">
 
   <!-- Title -->
-  <title></title>
+  <title>MY Website</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 
     <div class="Git-Hub">
       Go checkout my GitHub!
-      <a href="https://github.com/xRESCUEBOBx" target="blank_">GitHub</a>
+      <a href="https://github.com/xRESCUEBOBx" target="blank_" class="Git-Hub-Link">GitHub</a>
     </div>
 
 
