Improvements to the rock-paper-scissors game.

--- a/mywebsite.html
+++ b/mywebsite.html
@@ -19,6 +19,7 @@
 
   <link rel="stylesheet" href="/styles/rock-paper-scissors.css">
   <link rel="stylesheet" href="/styles/clicker-game.css">
+  <link rel="stylesheet" href="/styles/footer.css">
 
   <!-- Title -->
   <title>MY Website!!! Version 13</title>
@@ -41,24 +42,26 @@
 
   <main class="main-grid">
     <div class="rock-paper-scissors-game">
-      <h1>
-        Rock Paper Scissors
-      </h1>
+      <div class="rock-paper-scissors-header">
+        <h1>
+          Rock Paper Scissors
+        </h1>
 
-      <div class="Buttons">
-        <button class="rockButton js-rock-button">
-          <img src="/images/rock-emoji.png" alt="">
-        </button>
+        <div class="Buttons-Div">
+          <button class="rockButton js-rock-button">
+            <img src="/images/rock-emoji.png" alt="">
+          </button>
 
-        <button class="paperButton js-paper-button">
-          <img src="/images/paper-emoji.png" alt="">
-        </button>
+          <button class="paperButton js-paper-button">
+            <img src="/images/paper-emoji.png" alt="">
+          </button>
 
-        <button class="scissorsButton js-scissors-button">
-          <img src="/images/scissors-emoji.png">
-        </button>
+          <button class="scissorsButton js-scissors-button">
+            <img src="/images/scissors-emoji.png">
+          </button>
+        </div>
       </div>
-      <div>
+      <div class="results-div">
         <p class="js-result result"></p>
         <p class="js-moves moves"></p>
       </div>
@@ -96,7 +99,16 @@
 
   </main>
 
-  <footer>
+  <footer class="footer">
+    <div class="footer-section-1">
+      Thanks for visiting, I hope you enjoyed!
+    </div>
+    <div class="footer-section-2">
+      Come back and visit anytime!
+    </div>
+    <div class="footer-section-3">
+      I will continue to add projects as I complete them.
+    </div>
 
   </footer>
 
