Adding picture switcher

--- a/mywebsite.html
+++ b/mywebsite.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="/styles/rock-paper-scissors.css">
   <link rel="stylesheet" href="/styles/clicker-game.css">
   <link rel="stylesheet" href="/styles/footer.css">
+  <link rel="stylesheet" href="/styles/div3.css">
+  <link rel="stylesheet" href="/styles/div4.css">
 
   <!-- Title -->
   <title>MY Website!!! Version 13</title>
@@ -96,6 +98,13 @@
       </div>
 
     </div>
+    <div class="div3">
+      <img src="/Images/komodo dragon.jpg" class="js-komodo-pic">
+      <button class="js-change-pic-button">Change Picture</button>
+    </div>
+    <div class="div4">
+
+    </div>
 
   </main>
 
@@ -115,6 +124,7 @@
   <noscript>Your browser don't support JavaScript!</noscript>
   <script src="/scripts/clicker-game.js"></script>
   <script src="./scripts/rock-paper-scissors.js"></script>
+  <script src="/scripts/div3.js"></script>
 </body>
 
 </html>
