Added 2 more divs to practice in

--- a/mywebsite.html
+++ b/mywebsite.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="/styles/footer.css" />
     <link rel="stylesheet" href="/styles/div3.css" />
     <link rel="stylesheet" href="/styles/div4.css" />
+    <link rel="stylesheet" href="/styles/div5.css" />
+    <link rel="stylesheet" href="/styles/div6.css" />
 
     <!-- Title -->
     <title>MY Website!!! Version 13</title>
@@ -102,6 +104,8 @@
       </div>
 
       <div class="div4"></div>
+      <div class="div5"></div>
+      <div class="div6"></div>
     </main>
 
     <footer class="footer">
